# zadania

kolizja_trojkatow_zad_1/: CMakeLists.txt  isColliding.h  main.cpp
kolizja_trojkatow_zad_1/Google_test/: test.cpp
predykat_zad3/: CMakeLists.txt  function.h  main.cpp
predykat_zad3/Google_test/: test1.cpp
przesowaniePikseli zad2/: CMakeLists.txt  main.cpp
